--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <link rel="stylesheet" href="icons/icons.css">
   <link rel="stylesheet" href="css/style.css">
 
-  <title>kupon</title>
+  <title>Home</title>
 </head>
 <body>
 
@@ -50,8 +50,8 @@
           <img src="images/logo.png" width="80" height="42" alt="logo">
 
             <ul class="menu-ul">
-              <li class="menu-item"><a href="#">Գլխավոր էջ</a></li>
-              <li class="menu-item"><a href="#">Ակցիաներ</a></li>
+              <li class="menu-item"><a href="index.html">Գլխավոր էջ</a></li>
+              <li class="menu-item"><a href="sale.html">Ակցիաներ</a></li>
               <li class="menu-item"><a href="#">Բիզնեսի համար</a></li>
               <li class="menu-item"><a href="#">Մեր մասին</a></li>
             </ul>
@@ -103,8 +103,8 @@
 </nav>
 
 <div class="menu-item-mobile">
-  <a class="menu-item-mobile-teg" href="#">Գլխավոր էջ</a>
-  <a class="menu-item-mobile-teg" href="#">Ակցիաներ</a>
+  <a class="menu-item-mobile-teg" href="index.html">Գլխավոր էջ</a>
+  <a class="menu-item-mobile-teg" href="sale.html">Ակցիաներ</a>
   <a class="menu-item-mobile-teg" href="#">Բիզնեսի համար</a>
   <a class="menu-item-mobile-teg" href="#">Մեր մասին</a>
   <div class="contact-block">
