--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
            <div class="box">
              <div class="price-box">
               <div class="title">
-                <h3>Russia Hotel</h3>
+                <a href="product.html"><h3>Russia Hotel</h3></a>
                 <span>Ծաղկաձոր</span>
               </div>
                <div class="price">
@@ -221,7 +221,7 @@
            <div class="box">
              <div class="price-box">
               <div class="title">
-                <h3>Russia Hotel</h3>
+                <a href="product.html"><h3>Russia Hotel</h3></a>
                 <span>Ծաղկաձոր</span>
               </div>
                <div class="price">
@@ -281,7 +281,7 @@
            <div class="box">
              <div class="price-box">
               <div class="title">
-                <h3>Russia Hotel</h3>
+                <a href="product.html"><h3>Russia Hotel</h3></a>
                 <span>Ծաղկաձոր</span>
               </div>
                <div class="price">
@@ -341,7 +341,7 @@
            <div class="box">
              <div class="price-box">
               <div class="title">
-                <h3>Russia Hotel</h3>
+                <a href="product.html"><h3>Russia Hotel</h3></a>
                 <span>Ծաղկաձոր</span>
               </div>
                <div class="price">
@@ -401,7 +401,7 @@
            <div class="box">
              <div class="price-box">
               <div class="title">
-                <h3>Russia Hotel</h3>
+                <a href="product.html"><h3>Russia Hotel</h3></a>
                 <span>Ծաղկաձոր</span>
               </div>
                <div class="price">
@@ -461,7 +461,7 @@
            <div class="box">
              <div class="price-box">
               <div class="title">
-                <h3>Russia Hotel</h3>
+                <a href="product.html"><h3>Russia Hotel</h3></a>
                 <span>Ծաղկաձոր</span>
               </div>
                <div class="price">
