--- a/sale.html
+++ b/sale.html
@@ -118,7 +118,7 @@
 
  <div class="inner">
    <div class="buttons">
-     <div class="btn-filter">
+     <div class="btn-filter active">
        Լողավազան
      </div>
      <div class="btn-filter">
@@ -173,7 +173,7 @@
           <div class="box">
             <div class="price-box">
               <div class="title">
-                <h3>Russia Hotel</h3>
+                <a href="product.html"><h3>Russia Hotel</h3></a>
                 <span>Ծաղկաձոր</span>
               </div>
               <div class="price">
@@ -233,7 +233,7 @@
           <div class="box">
             <div class="price-box">
               <div class="title">
-                <h3>Russia Hotel</h3>
+                <a href="product.html"><h3>Russia Hotel</h3></a>
                 <span>Ծաղկաձոր</span>
               </div>
               <div class="price">
@@ -293,7 +293,7 @@
           <div class="box">
             <div class="price-box">
               <div class="title">
-                <h3>Russia Hotel</h3>
+                <a href="product.html"><h3>Russia Hotel</h3></a>
                 <span>Ծաղկաձոր</span>
               </div>
               <div class="price">
@@ -353,7 +353,7 @@
           <div class="box">
             <div class="price-box">
               <div class="title">
-                <h3>Russia Hotel</h3>
+                <a href="product.html"><h3>Russia Hotel</h3></a>
                 <span>Ծաղկաձոր</span>
               </div>
               <div class="price">
@@ -413,7 +413,7 @@
           <div class="box">
             <div class="price-box">
               <div class="title">
-                <h3>Russia Hotel</h3>
+                <a href="product.html"><h3>Russia Hotel</h3></a>
                 <span>Ծաղկաձոր</span>
               </div>
               <div class="price">
@@ -473,7 +473,7 @@
           <div class="box">
             <div class="price-box">
               <div class="title">
-                <h3>Russia Hotel</h3>
+                <a href="product.html"><h3>Russia Hotel</h3></a>
                 <span>Ծաղկաձոր</span>
               </div>
               <div class="price">
@@ -533,7 +533,7 @@
           <div class="box">
             <div class="price-box">
               <div class="title">
-                <h3>Russia Hotel</h3>
+                <a href="product.html"><h3>Russia Hotel</h3></a>
                 <span>Ծաղկաձոր</span>
               </div>
               <div class="price">
@@ -593,7 +593,7 @@
           <div class="box">
             <div class="price-box">
               <div class="title">
-                <h3>Russia Hotel</h3>
+                <a href="product.html"><h3>Russia Hotel</h3></a>
                 <span>Ծաղկաձոր</span>
               </div>
               <div class="price">
@@ -653,7 +653,7 @@
           <div class="box">
             <div class="price-box">
               <div class="title">
-                <h3>Russia Hotel</h3>
+                <a href="product.html"><h3>Russia Hotel</h3></a>
                 <span>Ծաղկաձոր</span>
               </div>
               <div class="price">
@@ -713,7 +713,7 @@
           <div class="box">
             <div class="price-box">
               <div class="title">
-                <h3>Russia Hotel</h3>
+                <a href="product.html"><h3>Russia Hotel</h3></a>
                 <span>Ծաղկաձոր</span>
               </div>
               <div class="price">
@@ -773,7 +773,7 @@
           <div class="box">
             <div class="price-box">
               <div class="title">
-                <h3>Russia Hotel</h3>
+                <a href="product.html"><h3>Russia Hotel</h3></a>
                 <span>Ծաղկաձոր</span>
               </div>
               <div class="price">
@@ -833,7 +833,7 @@
           <div class="box">
             <div class="price-box">
               <div class="title">
-                <h3>Russia Hotel</h3>
+                <a href="product.html"><h3>Russia Hotel</h3></a>
                 <span>Ծաղկաձոր</span>
               </div>
               <div class="price">
