--- a/product.html
+++ b/product.html
@@ -112,10 +112,186 @@
   </div>
 </div>
 
-<section class="products products-sale">
+<section class="product-header">
+
+  <div class="container">
+
+    <div class="row">
+
+      <div class="col-md-7 col-12">
+        <div style="background-image: url('./images/product-header-slider.png')" class="image">
+          <button class="arrows-up-down">
+            <i class="fa-sharp fa-light fa-arrows-up-down"></i>
+          </button>
+          <button class="left">
+            <i class="fa-regular fa-chevron-left"></i>
+          </button>
+          <button class="right">
+            <i class="fa-solid fa-chevron-right"></i>
+          </button>
+        </div>
+      </div>
+      <div class="col-md-5 col-12  ps-md-4">
+        <div class="box">
+          <div class="title">
+            <a href="product.html"><h3>Russia Hotel</h3></a>
+            <span>Ծաղկաձոր</span>
+            <h5 >Արժեքը ներառում է</h5>
+          </div>
+          <div class="buttons">
+            <button class="btn-gray">Լողավազան</button>
+            <button class="btn-gray">Թենիս</button>
+            <button class="btn-gray">Wi Fi</button>
+            <button class="btn-gray">Մարզասրահ</button>
+            <button class="btn-gray">2 անգամյա սնունդ</button>
+          </div>
+          <div class="price-box">
+            <div class="icons">
+              <button class="btn-orange">Գնել</button>
+              <div class="icon ms-28">
+                <i class="fa-regular fa-heart"></i>
+                <i class="fa-solid fa-heart"></i>
+              </div>
+            </div>
+            <div class="price">
+              <div class="price-item">
+                <span class="line">20000 դր</span>
+                <div class="sale">
+                  <span>-20%</span>
+                </div>
+              </div>
+              <h4>12․000 դր</h4>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+    </div>
+
+
+  </div>
+
+
+</section>
+
+<section class="tab">
+  <div class="container">
+    <ul class="nav nav-tabs" id="myTab" role="tablist">
+      <li class="nav-item me-md-3 me-2" role="presentation">
+        <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home" type="button" role="tab" aria-controls="home" aria-selected="true">Նկարագրություն</button>
+      </li>
+      <li class="nav-item" role="presentation">
+        <button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile" type="button" role="tab" aria-controls="profile" aria-selected="false">Հասցե</button>
+      </li>
+    </ul>
+    <div class="tab-content" id="myTabContent">
+      <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+        <p>
+          Կտրոնը հնարավորություն է տալիս անցկացնելու Ձեր հանգիստը Ծաղկաձորի KECHARIS հյուրանոցում` մինչև 25% զեղչով
+          <br>
+          <br>
+          * Ուրբաթ - կիրակի օրերին զեղչը գործում է 2 օր ամրագրելու դեպքում։
+          <br>
+          <br>
+          Արժեքները մինչև 30.08.2023
+          <br>
+          1) ներառյալ նախաճաշ
+          <br>
+          Ստանդարտ (2 անձ) -1 օրը 28.000 դրամ` 34.000 դրամի փոխարեն
+          <br>
+          Սուպերիոր (2 անձ) -1 օրը 30.000 դրամ՝ 36.000 դրամի փոխարեն
+          <br>
+          Դելյուքս (2 անձ) -1 օրը 36.000 դրամ՝ 44.000 դրամի փոխարեն
+          <br>
+          Ընտանեկան Դուպլեքս (2 անձ) -1 օրը 36.000 դրամ՝ 44.000 դրամի փոխարեն
+          <br>
+          <br>
+          2) ներառյալ նախաճաշ և ընթրիք
+          <br>
+          Ստանդարտ (2 անձ) -1 օրը 32.000 դրամ` 44.000 դրամի փոխարեն
+          <br>
+          Սուպերիոր (2 անձ) -1 օրը 34.000 դրամ՝ 46.000 դրամի փոխարեն
+          <br>
+          Դելյուքս (2 անձ) -1 օրը 40.000 դրամ՝ 54.000 դրամի փոխարեն
+          <br>
+          Ընտանեկան Դուպլեքս (2 անձ) -1 օրը 40.000 դրամ՝ 54.000 դրամի փոխարեն
+          <br>
+          Հավելյալ`
+          <br>
+          հաճելի անակնկալներ ՆՈՐԱՊՍԱԿՆԵՐԻՆ:
+          <br>
+          Երեխաների կացությունը`
+          <br>
+          Մինչև 6 տարեկան 1 երեխան ԱՆՎՃԱՐ
+          <br>
+          Մինչև 6 տարեկան 2 երեխան 5000 դրամ
+          <br>
+          6-ից 12 տարեկան մեկ երեխան 5000 դրամ
+          <br>
+          12 տարեկանից բարձր 1 անձը 10.000 դրամ
+          <br>
+        </p>
+      </div>
+      <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+        <p>
+          Կտրոնը հնարավորություն է տալիս անցկացնելու Ձեր հանգիստը Ծաղկաձորի KECHARIS հյուրանոցում` մինչև 25% զեղչով
+          <br>
+          <br>
+          * Ուրբաթ - կիրակի օրերին զեղչը գործում է 2 օր ամրագրելու դեպքում։
+          <br>
+          <br>
+          Արժեքները մինչև 30.08.2023
+          <br>
+          1) ներառյալ նախաճաշ
+          <br>
+          Ստանդարտ (2 անձ) -1 օրը 28.000 դրամ` 34.000 դրամի փոխարեն
+          <br>
+          Սուպերիոր (2 անձ) -1 օրը 30.000 դրամ՝ 36.000 դրամի փոխարեն
+          <br>
+          Դելյուքս (2 անձ) -1 օրը 36.000 դրամ՝ 44.000 դրամի փոխարեն
+          <br>
+          Ընտանեկան Դուպլեքս (2 անձ) -1 օրը 36.000 դրամ՝ 44.000 դրամի փոխարեն
+          <br>
+          <br>
+          2) ներառյալ նախաճաշ և ընթրիք
+          <br>
+          Ստանդարտ (2 անձ) -1 օրը 32.000 դրամ` 44.000 դրամի փոխարեն
+          <br>
+          Սուպերիոր (2 անձ) -1 օրը 34.000 դրամ՝ 46.000 դրամի փոխարեն
+          <br>
+          Դելյուքս (2 անձ) -1 օրը 40.000 դրամ՝ 54.000 դրամի փոխարեն
+          <br>
+          Ընտանեկան Դուպլեքս (2 անձ) -1 օրը 40.000 դրամ՝ 54.000 դրամի փոխարեն
+          <br>
+          Հավելյալ`
+          <br>
+          հաճելի անակնկալներ ՆՈՐԱՊՍԱԿՆԵՐԻՆ:
+          <br>
+          Երեխաների կացությունը`
+          <br>
+          Մինչև 6 տարեկան 1 երեխան ԱՆՎՃԱՐ
+          <br>
+          Մինչև 6 տարեկան 2 երեխան 5000 դրամ
+          <br>
+          6-ից 12 տարեկան մեկ երեխան 5000 դրամ
+          <br>
+          12 տարեկանից բարձր 1 անձը 10.000 դրամ
+          <br>
+        </p>
+      </div>
+    </div>
+
+  </div>
+</section>
+
+<section class="products product">
 
   <div class="container topSales">
 
+    <h2 class="product-heading">
+      ՆՄԱՆ ԱԿՑԻԱՆԵՐ
+    </h2>
 
     <div class="row">
 
@@ -301,10 +477,6 @@
       </div>
 
     </div>
-
-    <button class=" btn-orange">
-      Դիտել բոլորը
-    </button>
 
   </div>
 
