--- a/product.html
+++ b/product.html
@@ -183,7 +183,7 @@
       <li class="nav-item me-md-3 me-2 mb-2" role="presentation">
         <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home" type="button" role="tab" aria-controls="home" aria-selected="true">Նկարագրություն</button>
       </li>
-      <li class="nav-item mb-2"" role="presentation">
+      <li class="nav-item mb-2" role="presentation">
         <button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile" type="button" role="tab" aria-controls="profile" aria-selected="false">Հասցե</button>
       </li>
     </ul>
@@ -482,8 +482,8 @@
 
   </div>
 
-
 </section>
+
 
 <footer>
 
@@ -526,6 +526,21 @@
 
 
 </footer>
+
+<div class="modal fade" id="myModal" tabindex="-1">
+  <div class="modal-dialog modal-fullscreen">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <div class="image" style="background-image: url('images/product-header-slider.png')" >
+
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 
 
 <script src="js/fastfront.js"></script>
