--- a/product.html
+++ b/product.html
@@ -528,7 +528,7 @@
 </footer>
 
 <div class="modal fade" id="myModal" tabindex="-1">
-  <div class="modal-dialog modal-fullscreen">
+  <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
